--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0"
   },
